<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">Google+ SDK Sample</string>
    <string name="circles_title">Visible circles:</string>
    <string name="sign_out_button_name">Sign out</string>
    <string name="revoke_access_button_name">Revoke</string>
    <string name="status_sign_in_required">Sign-in required</string>
    <string name="status_sign_in_error">Error signing in: %s</string>
    <string name="status_loading">Loading…</string>
    <string name="status_signing_in">Signing in with Google+…</string>
    <string name="status_signed_out">Signed out</string>
    <string name="status_revoke_access">Revoked access</string>
    <string name="status_revoke_access_error">Error revoking access: %s</string>
    <string name="signed_in_as">Signed in as %s</string>

    <!-- Used if there was an error loading the signed in user's name. -->
    <string name="unknown_person">Unknown</string>
    <string name="play_services_error">Google Play services is not available.  This application will close.</string>
    <string name="close">Close</string>
    <string name="profile_picture">User\'s profile picture.</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_name">ComChat</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="APPName">ComChat Messenger</string>
    <string name="UsrInfo">Profile</string>
    <string name="title_activity_usr_profile">UsrProfile</string>
    <string name="title_activity_sign_in">SignIn with Google</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="home_setting">Settings</string>
    <string name="email">E Mail</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_chat">Chats</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_contact_profile">Contact_profile</string>
    <string name="profile">Profile</string>
    <string name="title_activity_signin">Signin</string>
    <string name="help_setting">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_about">About</string>
    <string name="blkcontact">Blocked Contacts</string>
    <string name="title_activity_setting_profile">SettingProfile</string>
    <string name="title_activity_block_contact">BlockContact</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_feedbk">Feedbk</string>
  	<string name="FAQ">FAQs</string>
  	<string name="userCurrentStatus">Your Current Status</string>
  	<string name="enterStatus">Enter your Status</string>
  	<string name="save">Save</string>
   	<string name="title_about_text1">ComChat V1.0</string>
  	<string name="title_about_text2">© 2014 ComChat Application</string>
  	<string name="title_blocked_contacts">BLOCKED CONTACTS</string>
  	<string name="FAQ3">Ans: The Contacts get automatically added from the contact book.</string>
  	<string name="FAQ2">Ans: There is an Unregister Account option in the Settings screen that will unregister your account from the application.</string>
  	<string name="FAQ1">Ans: You can use any of your active Google accounts to register and use the ComChat application.</string>
  	<string name="statusSet">Your Status</string>
</resources>
