<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/usrProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/home_setting"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textSettings"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/helpLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/helpImg"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:src="@drawable/help"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textboxChats"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:text="@string/FAQ"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#848484" />

        <LinearLayout
            android:id="@+id/aboutLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/aboutImg"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/settingAbout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:text="@string/about"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#848484" />

        <LinearLayout
            android:id="@+id/profLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profImg"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/settingprof"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:text="@string/profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#848484" />

        <LinearLayout
            android:id="@+id/blkContLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/blkContImg"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/blkCont"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:text="@string/blkcontact"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#848484" />


        <LinearLayout
            android:id="@+id/feedbkLinear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/feedbkImg"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/feedbk"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_margin="2sp"
                android:ems="15"
                android:padding="10sp"
                android:text="@string/feedback"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#848484" />
    </LinearLayout>

</RelativeLayout>